change security filter